# cricket-rnn-predictions

./: .gitignore  README.md  pyproject.toml
cricket_rnn/: __init__.py
cricket_rnn/framework/: __init__.py  ball.py  inning.py  match.py  over.py  roles.py  serialisation.py  squads.py  utils.py
cricket_rnn/loaders/: __init__.py
cricket_rnn/loaders/cricinfo/: __init__.py  _aliases_and_constants.py  headers.json  loader.py
cricket_rnn/loaders/cricsheet/: __init__.py  _aliases_and_constants.py  loader.py
