[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cricket-rnn"
version = "0.1"
description = "Predict cricket matches using recurrent neural networks(RNNs)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4",
    "dash",
    "dash_bootstrap_components",
    "numpy",
    "pandas",
    "requests"
]
